--- a/minetest.conf.example
+++ b/minetest.conf.example
@@ -61,6 +61,14 @@
 #    type: float
 # mouse_sensitivity = 0.2
 
+#    Horizontal look sensitivity with the keyboard, in degree per second.
+#    type: float
+# key_look_sensitivity_horizontal = 100.0
+
+#    Vertical look sensitivity with the keyboard, in degree per second.
+#    type: float
+# key_look_sensitivity_vertical = 75.0
+
 #    If enabled, "special" key instead of "sneak" key is used for climbing down and
 #    descending.
 #    type: bool
@@ -154,6 +162,26 @@
 #    See http://irrlicht.sourceforge.net/docu/namespaceirr.html#a54da2a0e231901735e3da1b0edf72eb3
 #    type: key
 # keymap_right = KEY_KEY_D
+
+#    Key for looking upward.
+#    See http://irrlicht.sourceforge.net/docu/namespaceirr.html#a54da2a0e231901735e3da1b0edf72eb3
+#    type: key
+# keymap_look_up = KEY_UP
+
+#    Key for looking downward.
+#    See http://irrlicht.sourceforge.net/docu/namespaceirr.html#a54da2a0e231901735e3da1b0edf72eb3
+#    type: key
+# keymap_look_down = KEY_DOWN
+
+#    Key for looking to the left.
+#    See http://irrlicht.sourceforge.net/docu/namespaceirr.html#a54da2a0e231901735e3da1b0edf72eb3
+#    type: key
+# keymap_look_up = KEY_LEFT
+
+#    Key for looking to the right.
+#    See http://irrlicht.sourceforge.net/docu/namespaceirr.html#a54da2a0e231901735e3da1b0edf72eb3
+#    type: key
+# keymap_look_up = KEY_RIGHT
 
 #    Key for jumping.
 #    See http://irrlicht.sourceforge.net/docu/namespaceirr.html#a54da2a0e231901735e3da1b0edf72eb3
